--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-# title: Ke Fan
+title:      
 
 # Your name to show in the footer
 author: Ke Fan
