--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title:      
+title: Ke Fan
 
 # Your name to show in the footer
 author: Ke Fan
