--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: Ke Fan
+title: Akay edited
 
 # Your name to show in the footer
-author: Ke Fan
+author: by me
 
 ###############################################
 # --- List of links in the navigation bar --- #
